--- a/index.html
+++ b/index.html
@@ -103,6 +103,11 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
         line-height: 28px;
       }
 
+      code-nasa-app {
+        display: block;
+        min-height: 100vh;
+      }
+
       footer {
         padding: 24px;
         text-align: center;
@@ -126,12 +131,14 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
     <footer>
       <p>
         NASA Officials:
-        <a href="mailto:beth.beck@nasa.gov">Beth Beck</a>
+        <a href="mailto:beth.beck@nasa.gov" target="_blank">Beth Beck</a>
         and
-        <a href="mailto:jason.duley@nasa.gov">Jason Duley</a>
+        <a href="mailto:jason.duley@nasa.gov" target="_blank">Jason Duley</a>
       </p>
       <p>
-        <a href="http://open.nasa.gov/">A NASA Open Government Initiative Website</a>
+        <a href="http://open.nasa.gov/" target="_blank">
+          A NASA Open Government Initiative Website
+        </a>
       </p>
     </footer>
   </body>
