--- a/src/shared-styles.html
+++ b/src/shared-styles.html
@@ -46,7 +46,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
       }
 
       .splash {
-        padding: 24vw 0 20vw;
+        padding: 46vw 0 40vw;
         text-align: center;
         text-transform: uppercase;
       }
@@ -55,6 +55,10 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
         h1 {
           font-size: 2em;
           letter-spacing: 20px;
+        }
+
+        .splash {
+          padding: 24vw 0 14vw;
         }
       }
     </style>
