Use ArcaMajora3 font

--- a/index.html
+++ b/index.html
@@ -95,6 +95,18 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
     <link rel="import" href="/src/code-nasa-app.html">
 
     <style>
+      @font-face {
+        font-family: 'ArcaMajora3-Bold';
+        src:  url('/fonts/ArcaMajora3-Bold.woff2') format('woff2'),
+              url('/fonts/ArcaMajora3-Bold.woff') format('woff');
+      }
+
+      @font-face {
+        font-family: 'ArcaMajora3-Heavy';
+        src:  url('/fonts/ArcaMajora3-Heavy.woff2') format('woff2'),
+              url('/fonts/ArcaMajora3-Heavy.woff') format('woff');
+      }
+
       body {
         margin: 0;
         font-family: sans-serif;
