--- a/src/code-nasa-app.html
+++ b/src/code-nasa-app.html
@@ -77,6 +77,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
         display: inline-block;
         padding: 14px 0;
         margin: 36px 20px;
+        font-family: 'ArcaMajora3-Bold', sans-serif;
         font-weight: normal;
         text-transform: uppercase;
         letter-spacing: 6px;
@@ -115,6 +116,10 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
         display: block;
         padding: 12px;
         margin: 12px 24px;
+        font-family: 'ArcaMajora3-Bold', sans-serif;
+        font-weight: normal;
+        text-transform: uppercase;
+        letter-spacing: 6px;
       }
       
       .drawer-links > a:hover {
