--- a/src/code-nasa-projects.html
+++ b/src/code-nasa-projects.html
@@ -66,8 +66,9 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
       }
 
       .project > h2 {
+        font-family: 'ArcaMajora3-Heavy', sans-serif;
         font-weight: normal;
-        letter-spacing: 1px;
+        letter-spacing: 2px;
       }
 
       .project > p {
