--- a/src/shared-styles.html
+++ b/src/shared-styles.html
@@ -15,6 +15,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
   <template>
     <style>
       h1 {
+        font-family: 'ArcaMajora3-Bold', sans-serif;
         font-size: 1.5em;
         font-weight: normal;
         letter-spacing: 4px;
