--- a/src/shared-styles.html
+++ b/src/shared-styles.html
@@ -19,6 +19,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
         font-size: 1.5em;
         font-weight: normal;
         letter-spacing: 4px;
+        color: #FFF;
       }
 
       h2 {
@@ -55,7 +56,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
       @media (min-width: 768px) {
         h1 {
           font-size: 2em;
-          letter-spacing: 20px;
+          letter-spacing: 28px;
         }
 
         .splash {
